feat: adiciona factories reutilizáveis para setup de testes unitários e parametriza cenários